5/q53/answers/completed-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app.com
  namespace: ckad-ftw
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: dev.app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
  - host: app.com
    http:
      paths:
      - path: /web
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /dev
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
